@@ -18,6 +18,7 @@ There are up to eight samples available to play for different note velocities.</
 	<li><b>Workspace</b> - this control allows to switch the UI between trigger mode and instrument configuration mode.</li>
 	<li><b>Pause</b> - pauses any updates of the trigger graph.</li>
 	<li><b>Clear</b> - clears all graphs.</li>
+	<li><b>Mix</b> - show dry/wet mix control overlay.</li>
 <?php if ($midi) {?>
 	<li><b>Channel</b> - the MIDI channel to use for MIDI note.</li>
 	<li><b>Note</b> - the note and the octave of the MIDI note generated by the trigger.</li>
@@ -85,8 +86,11 @@ There are up to eight samples available to play for different note velocities.</
 </ul>
 <p><b>'Audio channel' section:</b></p>
 <ul>
+	<li><b>Output gain</b> - the overall output gain of the plugin.</li>
+</ul>
+<p><b>'Dry/Wet' mix control overlay:</b></p>
+<ul>
 	<li><b>Dry</b> - the gain of the input signal passed to the audio inputs of the plugin.</li>
 	<li><b>Wet</b> - the gain of the processed signal.</li>
 	<li><b>Dry/Wet</b> - the knob that controls the balance between the mixed dry and wet signal (see <b>Dry</b> and <b>Wet</b>) and the dry (unprocessed) signal.</li>
-	<li><b>Output gain</b> - the overall output gain of the plugin.</li>
 </ul>
